--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 server.port=80
+#se modifica todo lo que tiene que ver con el servidor 
+
+logging.pattern.dateformat=hh:mm
+
+spring.main.banner-mode=off
+
+spring.thymeleaf.cache=false
