--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
 		<version>3.2.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.tienda</groupId>
-	<artifactId>Tienda</artifactId>
+	<groupId>com.ProyectoWeb</groupId>
+	<artifactId>ProyectoWeb</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Tienda</name>
-	<description>Proyecto en el curso web Jueves</description>
+	<name>ProyectoWeb</name>
+	<description>ProyectoWeb</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
